[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[semantic_release]
version_variable = setup.py:__version__
branch = main
upload_to_release = true
upload_to_pypi = true
remove_dist = false
